# lair

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini
lair/: __init__.py  agent_store.py  comfy_caller.py  config.py  events.py  logging.py  module_loader.py
lair/cli/: __init__.py  chat_interface.py  chat_interface_commands.py  chat_interface_completer.py  chat_interface_reports.py  run.py
lair/components/: __init__.py
lair/components/history/: __init__.py  chat_history.py  schema.py
lair/components/tools/: __init__.py  file_tool.py  mcp_tool.py  python_tool.py  search_tool.py  tmux_tool.py  tool_set.py
lair/conversation_manager/: __init__.py  base_conversation_manager.py  openai_conversation_manager.py  serializer.py
lair/files/: config.yaml  settings.yaml
lair/modules/: __init__.py  chat.py  comfy.py  util.py
lair/reporting/: __init__.py  reporting.py
lair/sessions/: __init__.py  base_chat_session.py  openai_chat_session.py  serializer.py  session_manager.py
lair/util/: __init__.py  argparse.py  core.py  prompt_template.py
stubs/: PIL.pyi  aiohttp.pyi  duckduckgo_search.pyi  jinja2.pyi  libtmux.pyi  openai.pyi  pdfplumber.pyi  trafilatura.pyi  yaml.pyi
stubs/comfy_script/runtime/: __init__.pyi
stubs/lmdb/: __init__.pyi
stubs/prompt_toolkit/completion/: __init__.pyi
stubs/rich/: __init__.pyi
stubs/rich/columns/: __init__.pyi
stubs/rich/console/: __init__.pyi
stubs/rich/markdown/: __init__.pyi
stubs/rich/text/: __init__.pyi
tests/: conftest.py  test_argparse_utils.py  test_base_chat_session.py  test_base_chat_session_additional.py  test_chat_commands.py  test_chat_history.py  test_chat_interface.py  test_chat_interface_additional.py  test_chat_interface_commands_extra.py  test_chat_interface_extended.py  test_chat_interface_more.py  test_chat_interface_new.py  test_chat_interface_reports.py  test_chat_interface_switch.py  test_cli.py  test_cli_args.py  test_comfy_caller.py  test_comfy_caller_extra.py  test_comfy_module.py  test_completer.py  test_config_module.py  test_config_module_additional.py  test_core.py  test_core_extended.py  test_events.py  test_file_tool.py  test_file_tool_additional.py  test_file_tool_extra.py  test_history_schema.py  test_logging_and_loader.py  test_modules.py  test_python_tool.py  test_reporting.py  test_reporting_additional.py  test_run.py  test_search_tool.py  test_serializer.py  test_session_manager.py  test_session_manager_additional.py  test_sessions.py  (+5 more)
tests/helpers/: __init__.py  chat_interface.py  comfy_caller.py
tests/integration/: test_cli_chat.py  test_cli_help.py  test_cli_runner.py  test_cli_util.py
tests/unit/: conftest.py  test_argparse_utils.py  test_base_chat_session.py  test_chat_commands.py  test_chat_history.py  test_chat_interface.py  test_chat_interface_commands.py  test_chat_interface_commands_misc.py  test_chat_interface_controls.py  test_chat_interface_extended.py  test_chat_interface_keybindings.py  test_chat_interface_reports.py  test_chat_interface_startup.py  test_chat_interface_toolbar.py  test_cli.py  test_cli_args.py  test_cli_runner.py  test_comfy_caller.py  test_comfy_caller_workflows.py  test_comfy_module.py  test_comfy_module_init.py  test_completer.py  test_config.py  test_config_module.py  test_core.py  test_core_file_utils.py  test_events.py  test_file_tool.py  test_history_schema.py  test_logging_and_loader.py  test_mcp_refresh.py  test_mcp_tool.py  test_module_loader.py  test_modules.py  test_openai_chat_session.py  test_python_tool.py  test_reporting.py  test_reporting_behavior.py  test_reporting_utils.py  test_run.py  (+9 more)
