[tool.poetry]
name = "lair"
version = "0.8.2+dev"
description = "Lousy AI Resources"
license = "BSD-3-Clause"
authors = ["Doug Haber <dhaber@leshylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.56.2"
rich = "^13.6.0"
prompt-toolkit = "^3.0.40"
jsonschema = "^4.19.2"
torch = "^2.5.1"
diffusers = "^0.31.0"
transformers = "^4.45.1"
compel = "^2.0.3"
comfy-script = {extras = ["client"], version = "^0.5.1"}
pdfplumber = "^0.11.5"
duckduckgo-search = "^7.3.0"
trafilatura = "^2.0.0"
jinja2 = "^3.1.5"
lmdb = "^1.6.2"
libtmux = "^0.46.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.5.1"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"lair/util/__init__.py" = ["F401", "F403"]
"lair/comfy_caller.py" = ["F403", "F405"]

[tool.pytest.ini_options]
addopts = "--cov=lair --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "lair/modules/comfy.py",
    "lair/modules/util.py",
    "lair/reporting/reporting.py",
    "lair/sessions/session_manager.py",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lair = "lair.cli.run:start"
