[tool.poetry]
name = "lair"
version = "0.8.2+dev"
description = "Lousy AI Resources"
license = "BSD-3-Clause"
authors = ["Doug Haber <dhaber@leshylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.56.2"
rich = "^13.6.0"
prompt-toolkit = "^3.0.40"
jsonschema = "^4.19.2"
comfy-script = {extras = ["client"], version = "^0.5.1"}
pdfplumber = "^0.11.5"
duckduckgo-search = "^7.3.0"
trafilatura = "^2.0.0"
jinja2 = "^3.1.5"
lmdb = "^1.6.2"
libtmux = "^0.46.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.5.1"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"
mypy = "^1.17.0"
types-pyyaml = "^6.0.12.20250516"
types-requests = "^2.32.4.20250611"
types-jsonschema = "^4.24.0.20250708"

[tool.ruff]
line-length = 120

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "S",   # security
  "PYI", # stub files
  "UP",  # pyupgrade
  "B",   # bugbear
  "SIM", # simplify
  "Q",   # quotes
  "C",   # complexity
  # "ANN", # annotations
  # "D",   # docstrings
  "N",   # naming
  "T",   # debugger/print
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
addopts = "--cov=lair --cov-report=term-missing --cov-fail-under=65"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lair = "lair.cli.run:start"

[tool.mypy]
mypy_path = "stubs"
